--- a/src/components/WinnerModal.css
+++ b/src/components/WinnerModal.css
@@ -12,7 +12,7 @@
   /* background: radial-gradient(transparent, transparent); */
   width: 100vw;
   height: 100vh;
-  z-index: 100;
+  z-index: 1000;
   /* animation: spotlight 1000ms linear forwards; */
 }
 
